--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chris's Résumé</title>
+<title>Chris' Résumé</title>
 <link rel="icon" href="chris13524.png"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
 <div style="margin-top:1rem;" class="container">
 
-<h1><a href="/"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>&nbsp;Chris's Résumé</h1>
+<h1><a href="/"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></a>&nbsp;Chris' Résumé</h1>
 <span class="glyphicon glyphicon-link"></span>
 <hr/>
 
