--- a/resume.html
+++ b/resume.html
@@ -36,9 +36,10 @@
 <li>general-purpose languages<ul>
 <li>Java</li>
 <li>Groovy</li>
-<li>C++</li>
+<li>C/C++</li>
 <li>Rust</li>
-<li class="text-muted">x86 assembly (Intel syntax)</li>
+<li>Python</li>
+<li class="text-muted">x86 assembly</li>
 </ul></li>
 
 <li>desktop<ul>
