Add GitLab to contact list.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ live and breathe code<br>
 <tr class="gap"><th>Reddit</th><td><a href="https://reddit.com/u/chris13524">chris13524</a></td></tr>
 
 <tr><th>GitHub</th><td><a href="https://github.com/chris13524">chris13524</a></td></tr>
+<tr><th>GitLab</th><td><a href="https://gitlab.com/chris13524">chris13524</a></td></tr>
 <tr><th>Bitbucket</th><td><a href="https://bitbucket.org/chris13524/">chris13524</a></td></tr>
 <tr><th>Stack Overflow</th><td><a href="https://stackoverflow.com/users/3171100/chris-smith">Chris Smith</a></td></tr>
 <tr class="gap"><th>WakaTime</th><td><a href="https://wakatime.com/@chris13524">chris13524</a></td></tr>
